--- a/src/package.json
+++ b/src/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ElectronSampleEditor",
+  "name": "ElectronTextEditor",
   "version": "0.0.1",
   "main": "main.js",
   "author": "Nozomi Nohara",
