ソースコードのメンテナンス：1.4.15に対応

--- a/src/package.json
+++ b/src/package.json
@@ -4,6 +4,6 @@
   "main": "main.js",
   "author": "Nozomi Nohara",
   "devDependencies": {
-    "electron-prebuilt": "^0.30.4"
+    "electron": "1.4.15"
   }
 }
