electron 1.8 -> electron 18対応
ace 1.3 -> 1.14
bootstrap 4 -> omit

不要なファイルの削除

ゴミ削除

--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "scripts": {
-    "start": "electron ./src"
+    "start": "electron ./src",
+    "format": "prettier --write 'src/**/*.{html,css,js}' '!src/libs/**'"
+  },
+  "dependencies": {
+    "electron": "^18.0.3"
   },
   "devDependencies": {
-    "electron": "^1.8.4"
+    "prettier": "^2.6.2"
   },
   "private": true
 }
